@@ -97,7 +97,6 @@ extern int CMap_add_notdefrange (CMap *cmap,
 
 extern int  CMap_add_codespacerange (CMap *cmap,
 				     const unsigned char *codelo, const unsigned char *codehi, int dim);
-extern int  CMap_match_codespace    (CMap *cmap, const unsigned char *c, int dim);
 
 extern void CMap_decode_char (CMap *cmap,
 			      const unsigned char **inbuf, long *inbytesleft,
