@@ -1,3 +1,14 @@
+2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* cff.[ch]: Declare cff_match_string() as static.
+	* cff.h: Drop unused '#define cff_is_stdstr(s)'.
+
+	* cid.[ch]: Declare CIDFont_new(), CIDFont_release(),
+	CIDFont_flush(), and CIDFont_cache_init() as static.
+
+	* cmap.[ch]: Declare CMap_match_codespace() as static.
+	* cmap_write.h: Put '#if 0...#endif' around Map_ToCode_stream().
+
 2015-08-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* agl.[ch]: Declare agl_load_listfile() as static.
